# SimpleServerWinsock

./: .gitignore  CMakeLists.txt  test.cpp
client/headers/: client.h  http_client.h
client/src/: http_client.cpp  main_client.cpp
common/headers/: Socket.h  message.h  packet.h  poll_receiver.h  receiver.h  safeguards.h  sender.h  serializable.h  user.h
common/src/: Socket.cpp  message.cpp  packet.cpp  poll_receiver.cpp  receiver.cpp  safeguards.cpp  sender.cpp  user.cpp
server/headers/: http_server.h  main_server.h  server.h
server/src/: http_server.cpp  main_server.cpp  server.cpp
